Added background styling. Geolocation still underway aiming for geolocation javascript in the next commit

--- a/momentum.html
+++ b/momentum.html
@@ -9,7 +9,10 @@
     <body>
         <div class="bg">
             <h1>Welcome</h1>
-            
+            <div class="weather">
+                    <h3>Weather Forecast</h3>
+                    <ul style="margin: 0">
+                    </ul>
                   </div>
             <div class="clock"></div>
             
